Revert claude-dev extension - comment it out
Keep AI coding assistants commented out by default for broader compatibility

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 		"vscode": {
 			"extensions": [
 				// AI Coding Assistants
-				"saoudrizwan.claude-dev",
+				// "saoudrizwan.claude-dev",
 				// "RooVeterinaryInc.roo-cline",
 
 				// Python Development
