--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,9 @@
 	"postCreateCommand": "pip3 install --upgrade pip && pip3 install --user -r requirements.txt"
 	
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+	// "features": {
+	//     "ghcr.io/devcontainers/features/aws-cli:1": {}
+	// },
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
