--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
-// A Secure And Minimal Python Development Environment
+// A Secure Minimal Python Development Environment
 {
 	"name": "Python Dev",
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.9-bookworm",
