--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,54 +1,69 @@
 // A Secure Minimal Python Development Environment
 {
-	"name": "Python Dev",
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.9-bookworm",
-
-	// Optimize for AI agents
-	"containerEnv": {
-		"GIT_EDITOR": "nano",                        // Use nano as the git editor
-		"GIT_PAGER": "cat",                          // Prevent getting stuck in vim/less pagers
-		"PIP_QUIET": "1",                            // Suppress verbose pip output to save tokens
-		"PYTHONPATH": "${containerWorkspaceFolder}"  // Enable imports from project root
-	},
-
-	// Configure tool-specific properties.
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				// AI Coding Assistants
-				// "saoudrizwan.claude-dev",
-				// "RooVeterinaryInc.roo-cline",
-
-				// Python Development
-				"ms-python.python",
-				"ms-python.pylance",
-				"ms-python.debugpy",
-				"ms-python.black-formatter"
-			],
-			"settings": {
-				// Remove MS bloat
-				"dev.containers.defaultExtensionsIfInstalledLocally": [],
-				
-				// Container Security
-				"dev.containers.dockerCredentialHelper": false, // Prevent Docker credentials leaking
-				"dev.containers.copyGitConfig": false, // Prevent Git credentials leaking
-				"dev.containers.gitCredentialHelperConfigLocation": "none", // Disable Git credential helper
-				"dev.containers.executeInWSL": false // Prevent WSL-related credential leaks on Windows
-			}
-		}
-	},
-	
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt",
-	
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {
-	//    "ghcr.io/devcontainers/features/aws-cli:1": {}
-	}
-	
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-	
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+    "name": "Python Dev",
+    "image": "mcr.microsoft.com/devcontainers/python:1-3.9-bookworm",
+    "containerEnv": {
+        // *** Git Configuration ***
+        // Use nano as the default git editor
+        "GIT_EDITOR": "nano",
+        // Prevent getting stuck in vim/less pagers
+        "GIT_PAGER": "cat",
+        // *** Python Configuration ***
+        // Suppress verbose pip output to save tokens
+        "PIP_QUIET": "1",
+        // Enable imports from project root
+        "PYTHONPATH": "${containerWorkspaceFolder}"
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                // *** AI Coding Assistants ***
+                "saoudrizwan.claude-dev",
+                // Alternative AI assistant (commented out)
+                // "RooVeterinaryInc.roo-cline",
+                // *** Python Development Extensions ***
+                // Python language support
+                "ms-python.python",
+                // Python language server
+                "ms-python.pylance",
+                // Python debugging
+                "ms-python.debugpy",
+                // Python code formatter
+                "ms-python.black-formatter"
+            ],
+            "settings": {
+                // *** Extension Management ***
+                // Remove MS bloat
+                "dev.containers.defaultExtensionsIfInstalledLocally": [],
+                // *** Container Security ***
+                // Prevent Docker credentials leaking
+                "dev.containers.dockerCredentialHelper": false,
+                // Prevent Git credentials leaking
+                "dev.containers.copyGitConfig": false,
+                // Disable Git credential helper
+                "dev.containers.gitCredentialHelperConfigLocation": "none",
+                // Prevent WSL-related credential leaks on Windows
+                "dev.containers.executeInWSL": false,
+                // *** Code Formatting ***
+                // Automatically format code on save
+                "editor.formatOnSave": true,
+                // Ensure files end with a newline
+                "files.insertFinalNewline": true,
+                // Use Black as the default Python formatter
+                "editor.defaultFormatter": "ms-python.black-formatter"
+            }
+        }
+    },
+    // *** Container Setup Commands ***
+    "postCreateCommand": "pip3 install -r requirements.txt",
+    // *** Additional Features ***
+    "features": {
+        // AWS CLI support
+        "ghcr.io/devcontainers/features/aws-cli:1": {}
+    }
+    // *** Optional Configuration (uncomment as needed) ***
+    // Make container ports available locally
+    // "forwardPorts": [],
+    // Connect as root user (see: https://aka.ms/dev-containers-non-root)
+    // "remoteUser": "root"
 }
